# infotecs-test-logger

./: CMakeLists.txt  README.md
.github/workflows/: tests.yml
application/src/: CMakeLists.txt  application.cpp  application.h  main.cpp
logger/: CMakeLists.txt
logger/src/: CMakeLists.txt  log_level.cpp  log_level.h  logger.cpp  logger.h
logger/src/writer/: write_strategy.h  write_to_socket.cpp  write_to_socket.h  write_to_stream.h  writer.cpp  writer.h
logger/tests/: CMakeLists.txt  logger_tests.cpp  logger_tests.h  main.cpp  socket_tests.cpp  socket_tests.h  test.h  writer_tests.cpp  writer_tests.h
